package kr.ac.deu.cse.scheduler.user.domain;

public class ActivatedUserState extends UserState {

  public ActivatedUserState() {
    super(true);
  }
}
