package kr.ac.deu.cse.scheduler.user.domain;

public class DeactivatedUserState extends UserState {

  public DeactivatedUserState() {
    super(false);
  }
}
